<resources>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_student">Student</string>
    <string name="btn_clinic">Clinic</string>
    <string name="btn_security">Security</string>
    <string name="btn_guidance">Guidance</string>
    <string name="btn_service">Service</string>
    <string name="app_name">Rapid Rescue</string>


</resources>
